Fix styling of more menu
Only shift it down on topic titlebar so it doesn't overlap
watchlist.

Bug: 68262

--- a/modules/new/styles/board/menu.less
+++ b/modules/new/styles/board/menu.less
@@ -12,6 +12,7 @@
 }
 
 .flow-menu {
+	top: 0;
 	clear: both;
 	position: static;
 	right: 0;
@@ -57,7 +58,6 @@ div.flow-menu-inverted {
 .client-js {
 	// Use child selector to block IE6; it doesn't support :hover
 	div > .flow-menu {
-		top: 1.5em;
 		bottom: auto;
 		display: block;
 		border: none;
